Updated offsets